# sayo_pbr_rs

./: .gitignore  Cargo.toml  README.md  vimspector.json
scenes/: default_scene.toml  mesh_test_scene.toml
scenes/dragon/: dragon_scene.toml
scenes/simple_cube/: simple_cube_scene.toml
scenes/teapot/: teapot_test_scene.toml
src/: lib.rs  main.rs
src/accel/: aabb.rs  bvh_node.rs  mod.rs
src/camera/: mod.rs  pinholecamera.rs
src/common/: mod.rs  mpscthreadpool.rs
src/film/: mod.rs
src/geometry/: aabb.rs  mod.rs  triangle.rs
src/integrators/: baseintegrator.rs  directlighting.rs  mod.rs  testintegrator.rs
src/scene/: mod.rs
src/utilities/: imageutils.rs  mathutils.rs  mod.rs  threadpool.rs
