[package]
name = "sayo_pbr_rs"
version = "0.1.0"
authors = ["Sabyasachi Mukherjee <sabyasachimukherjee2006@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
toml = "0.5.9"
byteorder = "1.4.3"
tobj = "3.2.3"
log = "0.4.17"
flexi_logger = { version = "0.23.0", default_features = false }
crossbeam = "0.8.2"
rand = "0.8.5"
tev_client = "0.5.2"
rayon = "1.5.3"
ndarray = { version = "0.15.6", features = ["rayon"] }

[profile.release]
debug = 1
incremental = true
